# JNVA-Scraping

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
src/: batch_convert.py  database_helper.py  downloader.py  scrape.py
src/modules/: Converter.py  Downloader.py  Indexer.py  ThreadsDownloader.py  ThreadsIndexer.py  argments.py  classes.py  color.py  converter.py  database_helper.py  downloader.py  errors.py  indexer.py  kakolog.py  log.json  melos.py  types.py  vars.py
