[project]
name = "jnai-scraping"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Yokkin", email = "neutrino@yokkin.com" }
]
dependencies = [
    "beautifulsoup4~=4.12.2",
    "requests~=2.31.0",
    "types-beautifulsoup4~=4.12.0.5",
    "types-requests~=2.31.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy~=1.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true
